Deleted BookList TextView in actibity_main.xml.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,35 +12,21 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context="com.example.rajeev.books.MainActivity"
-
         >
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:fontFamily="sans-serif"
-        android:gravity="center"
-        android:padding="2dp"
-        android:text="@string/app_name"
-        android:textAppearance="?android:textAppearanceMedium"
-        android:textColor="@android:color/black"
-        android:textStyle="bold" />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        >
 
         <LinearLayout
             android:id="@+id/search_bar_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingBottom="4dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:paddingTop="4dp">
+            android:padding="8dp"
+            >
 
 
             <EditText
@@ -53,8 +39,8 @@
 
             <ImageButton
                 android:id="@+id/search_button"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="0"
                 android:background="?android:attr/selectableItemBackground"
                 android:src="@android:drawable/ic_search_category_default" />
@@ -78,7 +64,9 @@
             android:divider="@null"
             android:dividerHeight="0dp"
             android:drawSelectorOnTop="true"
-            android:orientation="vertical" />
+            android:orientation="vertical"
+            android:padding="4dp"
+            />
 
 
         <ProgressBar
