--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context="com.example.rajeev.books.MainActivity"
+        android:background="@color/forgroundColor"
         >
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+
         >
 
         <LinearLayout
@@ -66,6 +70,8 @@
             android:drawSelectorOnTop="true"
             android:orientation="vertical"
             android:padding="4dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             />
 
 
@@ -82,6 +88,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:textColor="@android:color/black"
             android:textAppearance="?android:textAppearanceMedium" />
 
     </RelativeLayout>
